--- a/src/app/components/todo-list/todo-list.component.html
+++ b/src/app/components/todo-list/todo-list.component.html
@@ -1,24 +1,30 @@
 <div class="container">
-    @for (toDoItem of toDoItems; track toDoItem.id) {
-        <mat-card appearance="outlined" class="todo-card">
-            <mat-card-header class="todo-card-header">
-                <div style="flex: 1;">
-                    <mat-card-title>{{ toDoItem.title }}</mat-card-title>
-                    <mat-card-subtitle style="font-style: italic; font-size: 0.9em;">{{ toDoItem.expiryDateTimeUtc | date:'d MMMM y, HH:mm:ss' }}</mat-card-subtitle>
-                </div>
-                <div>
-                    <button mat-icon-button (click)="deleteToDoItem(toDoItem.id)">
-                        <mat-icon>delete</mat-icon>
-                    </button>
-                    <button mat-icon-button (click)="markToDoItemAsDone(toDoItem.id, toDoItem.completionPercentage)">
-                        <mat-icon>check_circle</mat-icon>
-                    </button>
-                </div>
-            </mat-card-header>
-            <mat-card-actions>
-                <mat-progress-bar mode="determinate" [value]="toDoItem.completionPercentage"></mat-progress-bar>
-                <span style="margin-left: 10px;">{{ toDoItem.completionPercentage }}%</span>
-            </mat-card-actions>
-        </mat-card>
+    <button mat-stroked-button style="margin-bottom: 2rem;" [routerLink]="['/todo-items/new']">Add new</button>
+
+    @if (toDoItems.length > 0) {
+        @for (toDoItem of toDoItems; track toDoItem.id) {
+            <mat-card appearance="outlined" class="todo-card">
+                <mat-card-header class="todo-card-header">
+                    <div style="flex: 1;">
+                        <mat-card-title>{{ toDoItem.title }}</mat-card-title>
+                        <mat-card-subtitle style="font-style: italic; font-size: 0.9em;">{{ toDoItem.expiryDateTimeUtc | date:'d MMMM y, HH:mm:ss' }}</mat-card-subtitle>
+                    </div>
+                    <div>
+                        <button mat-icon-button (click)="deleteToDoItem(toDoItem.id)">
+                            <mat-icon>delete</mat-icon>
+                        </button>
+                        <button mat-icon-button (click)="markToDoItemAsDone(toDoItem.id, toDoItem.completionPercentage)">
+                            <mat-icon>check_circle</mat-icon>
+                        </button>
+                    </div>
+                </mat-card-header>
+                <mat-card-actions>
+                    <mat-progress-bar mode="determinate" [value]="toDoItem.completionPercentage"></mat-progress-bar>
+                    <span style="margin-left: 10px;">{{ toDoItem.completionPercentage }}%</span>
+                </mat-card-actions>
+            </mat-card>
+        }
+    } @else {
+        <p>No to-do items available</p>
     }
 </div>
