Add /todo-items/edit/:id route for updating items.

--- a/src/app/components/todo-dialog/todo-dialog.component.html
+++ b/src/app/components/todo-dialog/todo-dialog.component.html
@@ -15,7 +15,7 @@
         </mat-form-field>
         <div class="todo-dialog-buttons">
             <button mat-flat-button (click)="closeDialog()">Close</button>
-            <button mat-flat-button>Update</button>
+            <button mat-flat-button (click)="navigateToEdit()">Update</button>
         </div>
     </form>
 </div>
