--- a/src/app/components/todo-list/todo-list.component.css
+++ b/src/app/components/todo-list/todo-list.component.css
@@ -15,3 +15,8 @@
     justify-content: space-between;
     align-items: center;
 }
+
+.todo-paginator {
+    background-color: inherit;
+    margin: 24px 0;
+}
