--- a/src/app/components/todo-list/todo-list.component.css
+++ b/src/app/components/todo-list/todo-list.component.css
@@ -1,3 +1,18 @@
+.todo-header {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.todo-header-button {
+    max-width: 7.5rem;
+    margin: 0 !important;
+}
+
+.todo-header-search {
+    max-width: 20rem;
+}
+
 .todo-card {
     margin-bottom: 1.5rem;
     transition: box-shadow 0.3s ease, background-color 0.3s ease, border-color 0.3s ease;
@@ -16,7 +31,7 @@
     align-items: center;
 }
 
-.todo-paginator {
+.todo-pagination {
     background-color: inherit;
     margin: 24px 0;
 }
